# ChimeraX

./: .gitignore  codecov.yml
.github/: prereq-file-filters.yml
.github/workflows/: build-and-test.yml  check-for-changes.yml  prereqs.yml
prereqs/: Makefile
src/bundles/: Makefile.bundle
src/bundles/movie/: Makefile  pyproject.toml
src/bundles/movie/ffmpeg/: Makefile
src/bundles/movie/src/: __init__.py  encode.py
